[package]
name = "btcmweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
btcmnetwork = {version = "0.1.0", path = "../btcmnetwork" }
btcmtools = {version = "0.1.0", path = "../btcmtools" }
slog = "2.7.0"
