[package]
name = "btcmweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
btcmnetwork = {version = "0.1.0", path = "../btcmnetwork" }
btcmtools = {version = "0.1.0", path = "../btcmtools" }
slog = "2.7.0"

tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full","fs", "trace"] }
axum-extra = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2.0"
sqlx = "0.7.3"
claims = "0.7.1"
serde = "1.0.197"
redis = { version = "0.24.0" , features = ["tokio-comp"]}
chrono = "0.4.34"
bincode = "1.3.3"
r2d2_redis2 = "0.23.3"
r2d2 = "0.8.10"
serde_json = "1.0.114"
argon2 = { version ="0.5.3" , features = ["default"]}
# r2d2_redis2 = "0.23.3"
